# autonomous-vehicle-llm

./: .gitignore  README.md  pyproject.toml
config/: ack_keyring.json  ack_keyring.mock.json  bundle_trust.json  policy.default.json  rollout_policy.json  transport.default.json  transport.mock.json  vendor_cert_pins.json  vendor_cert_pins.mock.json
docs/architecture/: system.md
docs/compliance/: controls.md
docs/operations/: llm-transport-benchmark-guide.md
docs/safety/: safety_case.md
scripts/: mock_vendor_gateway.py
specs/events/: telemetry.schema.json
specs/vehicle_api/: openapi.yaml
src/: main.py
src/autonomy/: __init__.py  app.py  approval_audit.py  audit.py  bundle_updater.py  cert_pins.py  cloud_planner.py  controller.py  edge_supervisor.py  errors.py  hf_planner.py  keyring.py  ledger.py  localization.py  mapping.py  models.py  obstacle_avoidance.py  perception.py  plan_verifier.py  policy.py  reason_codes.py  replay.py  safety_kernel.py  scenarios.py  trace.py  transport.py  vehicle_adapter.py
tests/: test_adapter_profiles.py  test_adapters.py  test_app_benchmark.py  test_app_trace_cli.py  test_approval_audit.py  test_audit.py  test_bundle_updater.py  test_cert_pins.py  test_edge_supervisor.py  test_keyring.py  test_ledger.py  test_localization.py  test_main_cli.py  test_obstacle_avoidance.py  test_perception.py  test_plan_verifier.py  test_policy.py  test_reason_codes.py  test_replay.py  test_safety_kernel.py  test_trace.py  test_transport_and_failover.py  test_vendor_transport.py
