[project]
name = "autonomy-stack"
version = "0.1.0"
description = "Safety-first autonomous unmanned vehicle control scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
